done first feature section

--- a/style.css
+++ b/style.css
@@ -123,3 +123,40 @@ body{
     background-repeat: no-repeat;
     cursor: pointer;
 }
+
+#feature .fe-box{
+    width: 180px;
+    height: auto;
+    text-align: center;
+    padding: 25px 15px;
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    border: 1px solid #cce7d0;
+    margin: 15px 0;
+   
+    overflow: hidden;
+}
+#feature .fe-box:hover{
+    transform: scale(1.03);
+    transition: 1s ease;
+    overflow: hidden;
+}
+#feature .fe-box img{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+#feature .fe-box h6{
+    display: inline-block;
+    padding: 9px 8px 6px 8px;
+    line-height: 1;
+    border-radius: 4px;
+    color: #088178;
+    background-color: #fddde4;
+
+}
+#feature{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
