--- a/style.css
+++ b/style.css
@@ -129,20 +129,23 @@ body{
     height: auto;
     text-align: center;
     padding: 25px 15px;
-    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.07);
     border: 1px solid #cce7d0;
     margin: 15px 0;
    
     overflow: hidden;
 }
 #feature .fe-box:hover{
-    transform: scale(1.03);
-    transition: 1s ease;
-    overflow: hidden;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, .2) ;
+    transition: .3s ease;
 }
 #feature .fe-box img{
     width: 100%;
     margin-bottom: 10px;
+}
+#feature .fe-box img:hover{
+    transform: scale(1.03);
+    transition: .3s ease;
 }
 
 #feature .fe-box h6{
@@ -160,3 +163,79 @@ body{
     justify-content: space-between;
     flex-wrap: wrap;
 }
+#product1{
+    text-align: center;
+}
+#product1 .pro-container{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    flex-wrap: wrap;
+}
+#product1 .pro{
+    margin: 15px 0;
+    width: 23%;
+    min-width: 250px;
+    padding: 10px 12px;
+    border: 1px solid #cce7d0 ;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, .07);
+    overflow: hidden;
+    position: relative;
+}
+#product1 .pro:hover{
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, .2) ;
+    transition: .3s ease;
+    
+}
+#product1 .pro img{
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
+}
+#product1 .pro img:hover{
+    transform: scale(1.3);
+    transition: .3s ease;
+}
+#product1 .pro .des{
+    text-align: start;
+    padding: 10px 0;
+}
+#product1 .pro span{
+    color: #465b52;
+    font-size: 12px;
+}
+#product1 .pro .des h5{
+    padding-top: 7px;
+    color: #1a1a1a;
+    font-size: 14px;
+}
+#product1 .pro .des i{
+    font-size: 12px;
+    color: gold;
+}
+#product1 .pro .des h4{
+    padding-top: 7px;
+    font-size: 15px;
+    font-weight: 700px;
+    color: #088178;
+}
+#product1 .pro .cart{
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50px;
+    background-color: #e8f6ea;
+    font-weight: 500px;
+    color: #088178;
+    border: 1px solid;
+    position: absolute;
+    bottom: 20px;
+    right: 10px; 
+}
+#product1 .pro .cart:hover{
+    transform: rotate(360deg);
+    transition: .5s ease;
+}
+
