--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body{
     height: auto;
     text-align: center;
     padding: 25px 15px;
-    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.07);
+    box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
     border: 1px solid #cce7d0;
     margin: 15px 0;
    
@@ -187,7 +187,7 @@ body{
     border: 1px solid #cce7d0 ;
     border-radius: 15px;
     cursor: pointer;
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, .07);
+    box-shadow: 20px 20px 30px rgba(0, 0, 0, .03);
     overflow: hidden;
     position: relative;
 }
@@ -245,4 +245,141 @@ body{
     transform: rotate(360deg);
     transition: .5s ease;
 }
+#banner{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("img/banner/b2.jpg");
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    background-position: center;
+}
 
+#banner h4{
+    color: white;
+    font-size: 16px;
+}
+#banner h2{
+    color: white;
+    font-size: 30px;
+    padding: 10px 0;
+
+}
+
+#banner h2 span{
+    color: salmon;
+}
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #000;
+    background-color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+
+#banner button:hover{
+    background-color: #088178;
+    color: white;
+}
+#sm-banner .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url("img/banner/b17.jpg");
+    min-width: 650px;
+    height: 50vh;
+    background-size: cover;
+    background-position: center;
+    padding: 30px;
+}
+#sm-banner{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+} 
+
+#sm-banner h4{
+    color: white;
+    font-size: 20px;
+    font-weight: 300;
+}
+#sm-banner h2{
+    color: white;
+    font-size: 28px;
+    font-weight: 800;
+}
+
+#sm-banner span{
+    color: white;
+    font-size: 14px;
+    font-weight: 500;
+    padding-bottom: 15px;
+}
+button.white{
+    font-size: 13px;
+    font-weight: 600;
+    padding: 11px 18px;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white;
+    cursor: pointer;
+    outline: none;
+    transition: 0.2s ease-in;
+}
+.banner-box:hover button{
+    background-color: #088178;
+    border: 1px solid #088178;
+}
+#sm-banner .banner-box-2{
+    background-image: url(img/banner/b10.jpg);
+}
+#banner-3{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 80px;
+    overflow: hidden;
+}
+#banner-3 .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url("img/banner/b7.jpg");
+    min-width: 30%;
+    height: 30vh;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+#banner-3 h2{
+    color: white;
+    font: weight 900px; 
+    font-size: 22px;
+}
+#banner-3 h3{
+    color: salmon;
+    font-weight: 800px;
+    font-size: 15px;
+}
+#banner-3 .banner-box-2{
+    background-image: url("img/banner/b4.jpg");
+}
+#banner-3 .banner-box-3{
+    background-image: url("img/banner/b18.jpg");
+}
+
+#banner-3 .banner-box:hover{
+    transform: scale(1.1);
+    transition: .2s ease-in;
+}
